@@ -16,6 +16,7 @@
 package com.android.server.healthconnect.storage.datatypehelpers;
 
 import static android.health.connect.datatypes.AggregationType.AggregationTypeIdentifier.TOTAL_CALORIES_BURNED_RECORD_ENERGY_TOTAL;
+import static android.health.connect.datatypes.RecordTypeIdentifier.RECORD_TYPE_TOTAL_CALORIES_BURNED;
 
 import static com.android.server.healthconnect.storage.utils.StorageUtils.REAL;
 import static com.android.server.healthconnect.storage.utils.StorageUtils.getCursorDouble;
@@ -29,9 +30,14 @@ import android.health.connect.datatypes.RecordTypeIdentifier;
 import android.health.connect.internal.datatypes.TotalCaloriesBurnedRecordInternal;
 import android.util.Pair;
 
+import com.android.internal.annotations.VisibleForTesting;
+import com.android.server.healthconnect.storage.request.AggregateParams;
+import com.android.server.healthconnect.storage.request.AggregateTableRequest;
+import com.android.server.healthconnect.storage.utils.StorageUtils;
+
+import java.time.Instant;
 import java.time.ZoneOffset;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -40,12 +46,18 @@ import java.util.List;
  *
  * @hide
  */
-@HelperFor(recordIdentifier = RecordTypeIdentifier.RECORD_TYPE_TOTAL_CALORIES_BURNED)
 public final class TotalCaloriesBurnedRecordHelper
         extends IntervalRecordHelper<TotalCaloriesBurnedRecordInternal> {
-    private static final String TOTAL_CALORIES_BURNED_RECORD_TABLE_NAME =
+
+    @VisibleForTesting
+    public static final String TOTAL_CALORIES_BURNED_RECORD_TABLE_NAME =
             "total_calories_burned_record_table";
+
     private static final String ENERGY_COLUMN_NAME = "energy";
+
+    public TotalCaloriesBurnedRecordHelper() {
+        super(RecordTypeIdentifier.RECORD_TYPE_TOTAL_CALORIES_BURNED);
+    }
 
     @Override
     public AggregateResult<?> getAggregateResult(
@@ -72,8 +84,7 @@ public final class TotalCaloriesBurnedRecordHelper
             case TOTAL_CALORIES_BURNED_RECORD_ENERGY_TOTAL:
                 return new AggregateParams(
                         TOTAL_CALORIES_BURNED_RECORD_TABLE_NAME,
-                        new ArrayList(Arrays.asList(ENERGY_COLUMN_NAME)),
-                        START_TIME_COLUMN_NAME,
+                        new ArrayList<>(List.of(ENERGY_COLUMN_NAME)),
                         Double.class);
             default:
                 return null;
@@ -85,6 +96,49 @@ public final class TotalCaloriesBurnedRecordHelper
             @NonNull Cursor cursor,
             @NonNull TotalCaloriesBurnedRecordInternal totalCaloriesBurnedRecord) {
         totalCaloriesBurnedRecord.setEnergy(getCursorDouble(cursor, ENERGY_COLUMN_NAME));
+    }
+
+    @Override
+    public double[] deriveAggregate(Cursor cursor, AggregateTableRequest request) {
+        int index = 0;
+        List<Pair<Long, Long>> groupIntervals = request.getGroupSplitIntervals();
+
+        List<Long> priorityList =
+                StorageUtils.getAppIdPriorityList(RECORD_TYPE_TOTAL_CALORIES_BURNED);
+        MergeDataHelper mergeDataHelper =
+                new MergeDataHelper(
+                        cursor,
+                        priorityList,
+                        ENERGY_COLUMN_NAME,
+                        Double.class,
+                        request.getUseLocalTime());
+        DeriveTotalCaloriesBurnedHelper deriveTotalCaloriesBurnedHelper =
+                new DeriveTotalCaloriesBurnedHelper(
+                        groupIntervals.get(0).first,
+                        groupIntervals.get(groupIntervals.size() - 1).second,
+                        priorityList,
+                        request.getUseLocalTime());
+        double[] totalCaloriesBurnedArray = new double[groupIntervals.size()];
+        for (Pair<Long, Long> groupInterval : groupIntervals) {
+            long groupStartTime = groupInterval.first;
+            long groupEndTime = groupInterval.second;
+            // Based on the number of groups calculate aggregate for each group by calling
+            // MergeDataHelper by eliminate duplicate for overlapping time interval
+            double total = mergeDataHelper.readCursor(groupStartTime, groupEndTime);
+            // For only TotalCaloriesBurned aggregate request we derive data from
+            // ActiveCaloriesRecord and BasalMetabolicRateRecord for empty intervals
+            List<Pair<Instant, Instant>> emptyIntervalList =
+                    mergeDataHelper.getEmptyIntervals(
+                            Instant.ofEpochMilli(groupStartTime),
+                            Instant.ofEpochMilli(groupEndTime));
+            if (emptyIntervalList.size() > 0) {
+                total += deriveTotalCaloriesBurnedHelper.getDerivedCalories(emptyIntervalList);
+            }
+
+            totalCaloriesBurnedArray[index++] = total;
+        }
+        deriveTotalCaloriesBurnedHelper.closeCursors();
+        return totalCaloriesBurnedArray;
     }
 
     @Override
